[package]
name = "loxiest"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
debug-trace-execution = []
debug-print-code = []
debug-stress-gc = []
debug-log-gc = []
nan-boxing = []
default = ["nan-boxing"]

[profile.release]
lto = "fat"
codegen-units = 1
